--- a/src/views/theme-cues.twig
+++ b/src/views/theme-cues.twig
@@ -14,9 +14,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1>Color Tester</h1>
+                <h1>Bootstrap Theme Builder</h1>
                 <p>
-                    This is to take a sample color see how it plays out.
+                    Pop in a color. Grab some fonts and see how it all plays out!
                 </p>
             </div>
         </div>
