--- a/src/views/templates/standard.html
+++ b/src/views/templates/standard.html
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="../components/bootstrap/dist/css/bootstrap.min.css">
+
     <link rel="stylesheet" id="bootstrap-link" href="../components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../components/spectrum/spectrum.css">
     {% block css %}{% endblock %}
