--- a/src/views/theme-cues.twig
+++ b/src/views/theme-cues.twig
@@ -143,13 +143,19 @@
                     <input type="hidden" name="text-color" id="text_color" value="#333333">
                     <input type="hidden" name="body-color" id="body_color" value="#ffffff">
 
+                    {#
                     <div class="form-group">
                         <button class="btn btn-primary btn-lg" type="submit" id="build-action">Build Bootstrap</button>
                     </div>
-
+                    #}
                 </div>
             </div>
         </form>
+        <div class="row">
+            <div class="col-xs-12">
+                <a href="#" id="download-link" download class="btn btn-primary btn-block btn-lg">Download the CSS</a>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
