--- a/src/views/theme-cues.twig
+++ b/src/views/theme-cues.twig
@@ -35,6 +35,43 @@
                             <input type="color" id="primary" name="primary" value="{{ color }}">
                         </div>
                     </div>
+                    <div class="primary-variants">
+                        <div class="swatch dark-50">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                        <div class="swatch dark-20">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                        <div class="swatch dark-10">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                        <div class="swatch exact">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                        <div class="swatch light-10">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                        <div class="swatch light-20">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                        <div class="swatch light-50">
+                            <div class="swatch-color">
+                                <span class="swatch-color-label"></span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-sm-6 col-xs-12">
